--- a/proyectoIntegrador/index.html
+++ b/proyectoIntegrador/index.html
@@ -1,82 +1,70 @@
 <!doctype html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RIWI - Sistema de Solicitudes</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar custom-nav sticky-top">
-      <div class="container-fluid px-4">
-        <img class="navbar-brand" src="./">
-        <div class="d-flex align-items-center gap-4 text-white">
-          <i class="bi bi-link-45deg fs-4 cursor-pointer"></i>
-          <i class="bi bi-search fs-5 cursor-pointer"></i>
-          <i class="bi bi-bell fs-5 cursor-pointer"></i>
-          <i class="bi bi-chat-left-text fs-5 cursor-pointer"></i>
-          <img
-            src="https://via.placeholder.com/35"
-            class="rounded-circle border border-2 border-secondary"
-            alt="user"
-          />
+        <div class="container-fluid px-4">
+            <img class="navbar-brand" src="./">
+            <div class="d-flex align-items-center gap-4 text-white">
+                <i class="bi bi-gear-wide-connected fs-4 cursor-pointer"></i>
+                <i class="bi bi-search fs-5 cursor-pointer"></i>
+                <i class="bi bi-bell fs-5 cursor-pointer"></i>
+                <i class="bi bi-chat-left-text fs-5 cursor-pointer"></i>
+                <img src="./IMG/image 2.png" class="rounded-circle border border-2 border-secondary" alt="user" />
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="container my-5">
-      <section id="view-form" class="spa-view">
-        <div class="form-container mx-auto">
-          <h2 class="title-purple mb-3">ESCRIBENOS TU SOLICITUD NOVA</h2>
-          <button class="btn btn-back mb-4" onclick="switchView('view-list')">
-            <i class="bi bi-arrow-left"></i> VOLVER
-          </button>
+        <div class="row d-flex justify-content-between">
+            <div class="col-md-6">
+                <section id="view-form" class="spa-view">
+                    <div class="form-container mx-auto">
+                        <h2 class="title-purple mb-3">ESCRIBENOS TU SOLICITUD NOVA</h2>
 
-          <form>
-            <input
-              type="text"
-              class="form-control custom-input mb-3"
-              value="JUAN ESTEBAN CABRERA PEREZ"
-              readonly
-            />
-            <input
-              type="email"
-              class="form-control custom-input mb-3"
-              value="juanes*****@gmail.com"
-              readonly
-            />
+                        <form>
+                            <input type="text" class="form-control custom-input mb-3" value="JUAN ESTEBAN CABRERA PEREZ"
+                                readonly />
+                            <input type="email" class="form-control custom-input mb-3" value="juanes*****@gmail.com"
+                                readonly />
 
-            <select class="form-select custom-input mb-3">
-              <option selected>MOTIVO DE SOLICITUD</option>
-              <option value="1">Excusas</option>
-              <option value="2">Certificados</option>
-              <option value="3">Constancias</option>
-            </select>
+                            <select class="form-select custom-input mb-3">
+                                <option selected>MOTIVO DE SOLICITUD</option>
+                                <option value="1">Excusas</option>
+                                <option value="2">Certificados</option>
+                                <option value="3">Constancias</option>
+                            </select>
 
-            <textarea
-              class="form-control custom-input mb-3"
-              rows="5"
-              placeholder="Describe tu solicitud aquí o danos el motivo..."
-            ></textarea>
+                            <textarea class="form-control custom-input mb-3" rows="5"
+                                placeholder="Describe tu solicitud aquí o danos el motivo..."></textarea>
 
-            <div class="upload-area mb-4">
-              <i class="bi bi-cloud-upload fs-2"></i>
-              <p class="mb-0">ADJUNTA TUS ARCHIVOS O SUELTALOS AQUÍ</p>
+                            <div class="upload-area mb-4">
+                                <i class="bi bi-cloud-upload fs-2"></i>
+                                <p class="mb-0">ADJUNTA TUS ARCHIVOS O SUELTALOS AQUÍ</p>
+                            </div>
+
+                            <button type="button" class="btn btn-submit w-100">
+                                ENVIAR SOLICITUD NOVA
+                            </button>
+                        </form>
+                    </div>
+                </section>
             </div>
-
-            <button type="button" class="btn btn-submit w-100">
-              ENVIAR SOLICITUD NOVA
-            </button>
-          </form>
+            <div class="col-md-4">
+                <h2 class="title-purple mb-3 text-center">MIS SOLICITUDES</h2>
+                <p class="text-center">Aun no tienes ninguna solicitud activa que puedas visualizar dentro de este campo.</p>
+            </div>
         </div>
-      </section>
-  </body>
+
+</body>
+
 </html>
